--- a/todoapp/src/app/todos/todo-item/todo-item.component.html
+++ b/todoapp/src/app/todos/todo-item/todo-item.component.html
@@ -1,8 +1,8 @@
-<li [class.completed]="todo.completado">
+<li [class.completed]="todo.completado" [class.editing]="editando">
     <div class="view">
-      <input class="toggle" type="checkbox"  />
-      <label>{{ todo.texto }}</label>
-      <button class="destroy"></button>
+      <input class="toggle" type="checkbox" [formControl]="chkCompletado" />
+      <label (dblclick)="editar()">{{ todo.texto }}</label>
+      <button class="destroy" (click)="borrar()"></button>
     </div>
-    <input class="edit" type="text" />
+    <input class="edit" type="text" [formControl]="txtInput" #inputFisico (blur)="terminarEdicion()"/>
 </li>
