--- a/todoapp/src/app/todos/todo-footer/todo-footer.component.html
+++ b/todoapp/src/app/todos/todo-footer/todo-footer.component.html
@@ -1,20 +1,10 @@
-<!-- This footer should hidden by default and shown when there are todos -->
 <footer class="footer">
-    <!-- This should be `0 items left` by default -->
-    <span class="todo-count"><strong>0</strong> tareas pendientes</span>
-    <!-- Remove this if you don't implement routing -->
+    <span class="todo-count"><strong>{{ pendientes }} </strong> tareas pendientes</span>
     <ul class="filters">
       <li *ngFor="let filtro of filtros" (click)="cambiarFiltro(filtro)">
         <!--selected-->
-        <a href="#/" [class.selected]="filtro === filtroActual">{{ filtro }}</a>
+        <a href="#/" [class.selected]="filtro === filtroActual">{{ filtro | titlecase  }}</a>
       </li>
-      <!--<li>
-        <a href="#/active">Activos</a>
-      </li>
-      <li>
-        <a href="#/completed">Completados</a>
-      </li>-->
     </ul>
-    <!-- Hidden if no completed items are left ↓ -->
-    <button class="clear-completed">Borrar completados</button>
+    <button class="clear-completed" (click)="limpiarCompletados()">Limpiar completados</button>
 </footer>
