--- a/todoapp/src/app/todos/todo-list/todo-list.component.html
+++ b/todoapp/src/app/todos/todo-list/todo-list.component.html
@@ -1,4 +1,4 @@
 <ul class="todo-list">
     <!--`editing` when editing `completed` when marked as completed -->
-    <app-todo-item *ngFor="let todo of todos" [todo]="todo"></app-todo-item>
+    <app-todo-item *ngFor="let todo of todos | filtroTodo:filtroActual" [todo]="todo"></app-todo-item>
 </ul>
