--- a/04-Ingreso-Egreso/src/app/auth/login/login.component.html
+++ b/04-Ingreso-Egreso/src/app/auth/login/login.component.html
@@ -29,9 +29,14 @@
                 </div>
               </div>
               <div class="form-group">
-                <button class="btn btn-primary submit-btn btn-block" (click)="logInUsuario()" [disabled]="loginForm.invalid">Login</button>
+                <button class="btn btn-primary submit-btn btn-block" (click)="logInUsuario()" *ngIf="!cargando" [disabled]="loginForm.invalid">Login</button>
               </div>
-              
+              <div class="form-group">
+                <button class="btn btn-primary submit-btn btn-block" [disabled]="true" *ngIf="cargando" >
+                  <i class="fa fa-spin fa-sync"></i>
+                  Espera...
+                </button>
+              </div>
               
               <div class="text-block text-center my-3">
                 <span class="text-small font-weight-semibold">No estas registrado? </span>
