--- a/04-Ingreso-Egreso/src/app/auth/register/register.component.html
+++ b/04-Ingreso-Egreso/src/app/auth/register/register.component.html
@@ -38,7 +38,13 @@
               </div>
 
               <div class="form-group">
-                <button class="btn btn-primary submit-btn btn-block" type="submit" [disabled]="registroForm.invalid">Crear cuenta</button>
+                <button class="btn btn-primary submit-btn btn-block" type="submit" [disabled]="registroForm.invalid" *ngIf="!cargando">Crear cuenta</button>
+              </div>
+              <div class="form-group">
+                <button class="btn btn-primary submit-btn btn-block" [disabled]="true" *ngIf="cargando" >
+                  <i class="fa fa-spin fa-sync"></i>
+                  Espera...
+                </button>
               </div>
               <div class="text-block text-center my-3">
                 <span class="text-small font-weight-semibold">ya tienes una cuenta?</span>
