--- a/04-Ingreso-Egreso/src/app/ingreso-egreso/detalle/detalle.component.html
+++ b/04-Ingreso-Egreso/src/app/ingreso-egreso/detalle/detalle.component.html
@@ -15,11 +15,20 @@
               </thead>
 
               <tbody>
-                <tr>
-                  <td>Descripción</td>
-                  <td>Monto</td>
-                  <td>Tipo</td>
-                  <td>acciones</td>
+                <tr *ngFor="let ingresoEgreso of ingresosEgresos | ordenIngreso">
+                  <td> {{ ingresoEgreso.descripcion }}</td>
+                  <td>{{ ingresoEgreso.monto | currency }}</td>
+                  <td [class.text-success]="ingresoEgreso.tipo === 'ingreso'"
+                  [class.text-danger]="ingresoEgreso.tipo === 'egreso'"
+                  >
+                    {{ ingresoEgreso.tipo  | titlecase }}
+                  </td>
+                  <td>
+                    <button type="button" class="btn btn-danger" (click)="borrar(ingresoEgreso.uid)">
+                      <i class="fa fa-trash"></i>
+                      Borrar
+                    </button>
+                  </td>
                 </tr>
               </tbody>
 
