--- a/04-Ingreso-Egreso/src/app/ingreso-egreso/estadisticas/estadisticas.component.html
+++ b/04-Ingreso-Egreso/src/app/ingreso-egreso/estadisticas/estadisticas.component.html
@@ -45,9 +45,8 @@
 </div>
 
 
-<div class="row m-5">
-  
-  <div class="col-12">
+<div class="row justify-content-center">
+  <div class="col-12 mt-5">
       <div class="card card-statistics">
         <div class="card-body">
 
@@ -70,7 +69,7 @@
     </div>
   </div>
 
-  <div class="col-12 p-5" *ngIf="ingresos > 0 || egresos > 0">
+  <div class="col-6 pt-5" *ngIf="ingresos > 0 || egresos > 0">
       <div class="card card-statistics">
         <div class="card-body">
           <h1 class="card-title">Gráfica</h1>
