--- a/04-Ingreso-Egreso/src/app/shared/sidebar/sidebar.component.html
+++ b/04-Ingreso-Egreso/src/app/shared/sidebar/sidebar.component.html
@@ -20,23 +20,23 @@
       </li>
   
       <li class="nav-item">
-        <a class="nav-link">
+        <a class="nav-link" routerLink="/">
           <i class="menu-icon fa fa-tachometer-alt"></i>
-          <span class="menu-title" routerLink="/">Dashboard</span>
+          <span class="menu-title">Dashboard</span>
         </a>
       </li>
   
       <li class="nav-item">
-        <a class="nav-link">
+        <a class="nav-link" routerLink="/ingreso-egreso">
           <i class="menu-icon fa fa-clipboard-list"></i>
-          <span class="menu-title" routerLink="/ingreso-egreso">Ingresos y Egresos</span>
+          <span class="menu-title">Ingresos y Egresos</span>
         </a>
       </li>
   
       <li class="nav-item">
-        <a class="nav-link">
+        <a class="nav-link" routerLink="/detalle">
           <i class="menu-icon fa fa-table"></i>
-          <span class="menu-title" routerLink="/detalle">Detalle</span>
+          <span class="menu-title">Detalle</span>
         </a>
       </li>
   
