--- a/04-Ingreso-Egreso/src/assets/css/style.css
+++ b/04-Ingreso-Egreso/src/assets/css/style.css
@@ -8110,7 +8110,7 @@ pre {
   .offset-xl-10 {
     margin-left: 83.33333%; }
   .offset-xl-11 {
-    margin-left: 91.66667%; } }
+    margin-left: 91.66667%; } 
 
 .table {
   width: 100%;
@@ -11504,7 +11504,7 @@ button.bg-dark:focus {
   .align-self-xl-baseline {
     align-self: baseline !important; }
   .align-self-xl-stretch {
-    align-self: stretch !important; } }
+    align-self: stretch !important; } 
 
 .float-left {
   float: left !important; }
@@ -12048,7 +12048,7 @@ button.bg-dark:focus {
     margin-bottom: auto !important; }
   .ml-xl-auto,
   .mx-xl-auto {
-    margin-left: auto !important; } }
+    margin-left: auto !important; } 
 
 .text-monospace {
   font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
@@ -13316,7 +13316,6 @@ pre {
       border: 2px solid #cbcbcb; }
     .purchace-popup > div > span .btn.purchase-button {
       background-color: #d209fa;
-      *zoom: 1;
       filter: progid:DXImageTransform.Microsoft.gradient(gradientType=1, startColorstr='#FFD209FA', endColorstr='#FF4F81D4');
       background-image: -owg-linear-gradient(left, #d209fa 1%, #4f81d4 100%);
       background-image: -webkit-linear-gradient(left, #d209fa 1%, #4f81d4 100%);
